--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Gifty Akosua Arkoh - WDD 231</title>
     <script src="scripts/project.js" defer></script>
     <meta name="description" content="My name is Gifty Akosua Arkoh i am studying Software developmet. This page is used to showcase the jobs available.">
     <meta name="author" content="Gifty Akosua Arkoh">
@@ -57,7 +57,6 @@
             </section>
         </div>
     </main>
-    </main>
     <footer>
         <nav class="media">
             <a href="https://github.com" target="_blank">
@@ -67,7 +66,7 @@
                 <img src="images/linkedin.png" alt="LinkedIn" width="60">
             </a>
             <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter logo.jpeg" alt="Twitter" width="60">
+                <img src="images/x logo.png" alt="Twitter" width="60">
             </a>
         </nav>
         <p>&copy; <span id="currentyear"></span> 💻Gifty Akosua Arkoh💻,Ghana.</p>
