--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </section>
                 <section class="card">
                 <h2>Student Photo</h2>
-                <img src="images/profile.jpg" alt="student photo" width="250">
+                <img src="images/rsz_profile.jpg" alt="student photo" width="250">
                 </section>
             </div>
             <section class="card" id="courses">
@@ -59,7 +59,7 @@
     </main>
     <footer>
         <nav class="media">
-            <a href="https://github.com" target="_blank">
+            <a href="https://www.github.com" target="_blank">
                 <img src="images/github.png" alt="GitHub" width="60">
             </a>
             <a href="https://www.linkedin.com" target="_blank">
