--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
     <main>
-        <h1>Home</h1>
+        <h1>WDD 231 - Home Page</h1>
         <div class="cards">
             <div class="row">
                 <section class="card">
