--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
     <main>
-        <h1>WDD 231 - Home Page</h1>
+        <h1>Home Page</h1>
         <div class="cards">
             <div class="row">
                 <section class="card">
@@ -42,7 +42,7 @@
                 </section>
                 <section class="card">
                 <h2>Student Photo</h2>
-                <img src="images/rsz_profile.jpg" alt="student photo" width="250">
+                <img src="images/rsz_profile.jpg" alt="photo" width="250">
                 </section>
             </div>
             <section class="card" id="courses">
