--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
     <main>
-        <h1>WDD 231</h1>
+        <h1>Gifty Akosua Arkoh - WDD 231</h1>
         <div class="cards">
             <div class="row">
                 <section class="card">
@@ -66,7 +66,7 @@
                 <img src="images/linkedin.png" alt="LinkedIn" width="60">
             </a>
             <a href="https://twitter.com" target="_blank">
-                <img src="images/x logo.png" alt="Twitter" width="60">
+                <img src="images/x-logo.png" alt="Twitter" width="60">
             </a>
         </nav>
         <p>&copy; <span id="currentyear"></span> 💻Gifty Akosua Arkoh💻,Ghana.</p>
