--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,7 +38,7 @@
         </nav>
     </header>
     <main>
-        <!-- Add inside <main> -->
+        <h1>Our Directory</h1>
 <div class="view-toggle">
   <button id="grid-view" class="active">Grid View</button>
   <button id="list-view">List View</button>
