--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -20,7 +20,7 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
-    <header>https://gifty12-hub.github.io/wdd231/chamber/directory.html
+    <header>
         <img src="images/projectlogo.png" alt="Chamber Logo" width="100">
         <h1>Kasoa Chamber of Commerce</h1>
         <button type="button" id="menu">  </button>
