--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
     <main>
-    <h1>Home</h1>
+    <h1>Kasoa Chamber of Commerce</h1>
 
     <!-- Hero Section -->
     <section class="hero">
