--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Gifty Akosua Arkoh">
     <meta property="og:title" content="Chamber of Commerce">
     <meta property="og:description" content="My name is Gifty Akosua Arkoh i am studying Software developmet. This page is used to showcase the jobs available.">
-    <meta property="og:image" content="images/projectlogo.png">
+    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRbDBwcPM8BUqHnxqx_QXwJi4OViAdqj9fQPQ&s">
     <meta property="og:url" content="https://gifty12-hub.github.io/wdd231/chamber/directory.html">
     <meta property="og:locale" content="en_US">
     <link rel="preconnect" href="https://fonts.googleapis.com">
