--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kasoa Chamber of Commerce</title>
     <script src="scripts/chamber.js" defer></script>
-    <meta name="description" content="My name is Gifty Akosua Arkoh i am studying Software developmet. This page is used to showcase the jobs available.">
+    <meta name="description" content="My name is Gifty Akosua Arkoh i am studying Software development. This page is used to showcase the jobs available.">
     <meta name="author" content="Gifty Akosua Arkoh">
     <meta property="og:title" content="Chamber of Commerce">
-    <meta property="og:description" content="My name is Gifty Akosua Arkoh i am studying Software developmet. This page is used to showcase the jobs available.">
+    <meta property="og:description" content="My name is Gifty Akosua Arkoh i am studying Software development. This page is used to showcase the jobs available.">
     <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRbDBwcPM8BUqHnxqx_QXwJi4OViAdqj9fQPQ&s">
     <meta property="og:url" content="https://gifty12-hub.github.io/wdd231/chamber/directory.html">
     <meta property="og:locale" content="en_US">
