--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             </div>
             <section class="card" id="courses">
             <h2>Web Certificate Course</h2>
+            <dialog id="course-details"></dialog>
             <div class="course-filters">
                 <button class="courses" id="all-btn">All</button>
                 <button class="courses" id="cse-btn">CSE</button>
