--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,7 +33,7 @@
                     <a id="old" href="directory.html">Chamber</a>
                 </li>
                 <li>
-                    <a id="new" href="#">Final Project</a>
+                    <a id="new" href="join.html">Join</a>
                 </li>
             </ul>
         </nav>
