--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kasoa Chamber of Commerce</title>
+    <title>Join - Kasoa Chamber of Commerce</title>
     <script src="scripts/chamber.js" defer></script>
     <meta name="description" content="My name is Gifty Akosua Arkoh i am studying Software development. This page is used to showcase the jobs available.">
     <meta name="author" content="Gifty Akosua Arkoh">
