--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -41,13 +41,11 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Our Directory</h1>
-<div class="view-toggle">
-  <button id="grid-view" class="active">Grid View</button>
-  <button id="list-view">List View</button>
-</div>
-<div id="members-container" class="grid"></div>
+    <main class="discover-main">
+        <aside class="sidebar" id="visit-message"></aside>
+        <section class="discover-grid" id="discover-grid">
+            <!-- Cards will be injected here by JS -->
+        </section>
     </main>
     <footer>
         <nav class="media">
