--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -35,6 +35,9 @@
                 <li>
                     <a id="new" href="join.html">Join</a>
                 </li>
+                <li>
+                    <a id="final" href="discover.html">Discover</a>
+                </li>
             </ul>
         </nav>
     </header>
