--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -44,7 +44,8 @@
     <main class="discover-main">
         <aside class="sidebar" id="visit-message"></aside>
         <section class="discover-grid" id="discover-grid">
-            <!-- Cards will be injected here by JS -->
+            <h2 class="visually-hidden">Discover Kasoa: Places of Interest</h2>
+    <!-- Cards will be injected here by JS -->
         </section>
     </main>
     <footer>
