--- a/finalp/index.html
+++ b/finalp/index.html
@@ -9,9 +9,9 @@
   <meta property="og:title" content="SpellSmart – Daily Word Challenge">
   <meta property="og:description" content="Improve your English spelling and vocabulary with SpellSmart's daily challenges and interactive tests.">
   <meta property="og:image" content="images/spellsmart.png">
-  <meta property="og:url" content="https://gifty12-hub.github.io/project/index.html">
+  <meta property="og:url" content="https://gifty12-hub.github.io/finalp/index.html">
   <meta property="og:type" content="website">
-  <link rel="icon" href="favicon(3).ico">
+  <link rel="icon" href="favicon1.ico">
   <link rel="stylesheet" href="styles/final.css">
   <link rel="stylesheet" href="styles/final-large.css">
   <script src="scripts/final.js" defer></script>
@@ -33,7 +33,7 @@
                     <a id="about" href="about.html">About</a>
                 </li>
                 <li>
-                    <a id="innovation" href="Innovation.html">Our Innovations</a>
+                    <a id="innovation" href="innovation.html">Our Innovations</a>
                 </li>
             </ul>
     </nav>
