--- a/finalp/innovation.html
+++ b/finalp/innovation.html
@@ -71,7 +71,9 @@
             </a>
       </nav>
         <p>&copy; <span id="currentyear"></span> 💻Gifty Akosua Arkoh💻,Ghana.</p>
-        <p id="lastModified"></p>  
+        <p id="lastModified"></p> 
+        <iframe src="https://www.loom.com/share/cdca719f8a9e45ee98068590d540661c?sid=21b3457f-a910-4f0b-9e19-705410f2db80"></iframe>
+
   </footer>
 </body>
 </html>
